# mgsc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mgs-format.md
src/: bdos.cpp  bdos.h  device.h  dosemu.h  main.cpp  mgsc-com.h  mgsc.cpp  mgsc.h  ram64k.cpp  ram64k.h  xtypes.h  z80.cpp  z80.h
